Fix button line spacing
This was mistakenly set to `1`.

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -183,7 +183,7 @@ button {
   font-family: inherit;
   font-size: inherit;
   font-weight: bold;
-  line-height: 1;
+  line-height: var(--line-height-small);
   margin: 0;
   padding: var(--padding-default);
 }
